2008-09-15  Michael Wiegand <michael.wiegand@intevation.de>

	Fixes to re-enable plugin loading after the OID changes. Please note
	that the selection of the plugins chosen by the user at the start of a
	new scan is _very_ slow at the moment since the plugin retrieval
	function is not yet optimized.

	* openvasd/nasl_plugins.c (nasl_plugin_launch): Call
	preferences_plugin_timeout with OID instead of ID.

	* openvasd/plugs_hash.c (plugins_send_md5_byid): Send OID instead of ID
	when sending MD5 hashes for plugin. (plugins_send_md5): Removed
	handling of obsolete md5_by_name capability.

	* openvasd/comm.c: Added new get_plug_by_oid function to retrieve
	plugins based on OID. Note that this makes plugin selection _very_ slow
	at the moment since the ID based optimized retrieval could no longer be
	used. (comm_setup_plugins) Changed to parse and use OIDs instead of IDs.

2008-09-10  Michael Wiegand <michael.wiegand@intevation.de>

	Make the plugin timeout settings use OID instead of ID.

	* openvasd/preferences.c (preferences_plugin_timeout): Changed to use
	OIDs.

	* openvasd/preferences.h: Adjusted function declaration.

	* openvasd/pluginlaunch.c (plugin_launch): Call
	preferences_plugin_timeout with OID instead of ID.

2008-09-05  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Make the command PLUGIN_LIST send OIDs instead of old IDs.
	Make the PLUGIN_INFO command be interpreted with OIDs
	instead of IDs.

	* openvasd/comm.c (send_plug_info): Changed behaviour
	that in case there is no OID, the plugin is not sent
	and instead a log message is issued. Previously the ID "1"
	was applied.
	Send OID instead of old ID.
	(plugin_send_infos): Now takes char * oid as second parameter
	instead of int id.

	* openvasd/comm.h: Changed proto for plugin_send_infos accordingly.

	* openvasd/ntp_11.c (ntp_11_parse_input): Call plugin_send_infos
	with its new API.

2008-09-09  Michael Wiegand <michael.wiegand@intevation.de>
